new color scheme

--- a/styles.scss
+++ b/styles.scss
@@ -1,19 +1,19 @@
 /*-- scss:defaults --*/
 //Colors
-$light_cool: #DEF4DF;
-$light_warm: #E8C6C2;
-$medium_color: #A77B99;
-$dark_cool: #02535F;
-$dark_warm:  #490C18;
+$light_cool: #D7F9FF;
+$light_warm: #668F80;
+$medium_color: #F9FBF2;
+$dark_cool: #AFCBFF;
+$dark_warm:  #0E1C36;
 
 //Import fonts
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Playfair+Display:wght@400;700&display=swap');
 
 //base Document bg
-$navbar-bg: $light_warm;
+$navbar-bg: $dark_cool;
 $navbar-fg:$dark_warm;
 $body_bg: $light_cool;
-$footer-bg: $light_warm;
+$footer-bg: $medium_color;
 $link-color:$dark_cool;
 
 /*-- scss:rules --*/
@@ -24,11 +24,11 @@ h1 {
 
 h3,h2 {
   letter-spacing: 2px;
-  color: $dark_cool;
+  color: $light_warm;
 }
 
 .title{
-  color: $medium_color;
+  color: $dark_warm;
 }
 
 .center-text {
